--- a/angular.json
+++ b/angular.json
@@ -126,5 +126,10 @@
       }
     }
   },
-  "defaultProject": "Angular2Prep"
+  "defaultProject": "Angular2Prep",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
